Add serializer for create one time event
